fix fancybox close icon some other style fixes

--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -55,9 +55,7 @@
 	transition: all .2s;
 
 	&:hover, &:active, &:focus {
-		color: #4c5370;
-		opacity: .8;
-		//color: #9ba1b6;
+		color: fade(#4c5370, 80%);
 		border-bottom-color: #d9dbe6;
 
 		top: -5px;
