--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -162,3 +162,19 @@
 .b-reviews__forum-icon_cypr {
 	background-position: -25px 0;
 }
+
+.b-reviews__head {
+	.my-heading-h1();
+
+	font-weight: bold;
+	margin-top: 0;
+	margin-bottom: 45px;
+	text-align: center;
+}
+
+.b-reviews__lead {
+	.my-heading-lead();
+
+	margin: 0 15px 100px;
+	text-align: center;
+}
