--- a/src/less/common.less
+++ b/src/less/common.less
@@ -254,26 +254,16 @@ body {
 }
 
 .fancybox-close {
-	top: -53px;
-	right: 21px;
-	width: 32px;
-	height: 32px;
+	position: fixed;
+	right: 50px;
+	top: 45px;
+	width: 38px;
+	height: 38px;
 
-	background: left top no-repeat url("../../assets/img/close.svg");
-	opacity: .8;
-	transition: all .1s ease-out;
-
-	@media (min-width: @screen-md-min) {
-		position: fixed;
-		right: 50px;
-		top: 30px;
-
-		//right: 0;
-	}
-
-	@media (min-width: @grid-float-breakpoint) {
-		opacity: .3;
-	}
+	background: left top no-repeat url("../../assets/img/slider-close.png");
+	background-size: 38px;
+	opacity: .5;
+	transition: all .1s;
 
 	&:hover, &:active, &:focus {
 		opacity: 1;
@@ -290,6 +280,9 @@ body {
 }
 
 .fancybox-nav {
+	width: 150px;
+	//max-width: ~"calc((100vw - 1080px) / 2)";
+
 	&:hover span {
 		color: #fff;
 		opacity: 1;
@@ -313,7 +306,6 @@ body {
 
 .fancybox-prev {
 	left: -150px;
-	width: 150px;
 
 	span {
 		left: 50px;
@@ -328,7 +320,6 @@ body {
 
 .fancybox-next {
 	right: -150px;
-	width: 150px;
 
 	span {
 		right: 50px;
