fix portfolio title size fancybox margin fix

--- a/src/less/mymixins.less
+++ b/src/less/mymixins.less
@@ -37,6 +37,18 @@
 	}
 }
 
+.my-heading-h2() {
+	font-size: 40px;
+
+	@media (min-width: @screen-md-min) {
+		font-size: 48px;
+	}
+
+	@media (min-width: @grid-float-breakpoint) {
+		font-size: 52px;
+	}
+}
+
 .my-heading-lead() {
 	color: #9ba1b6;
 	font-size: 20px;
