--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -5,7 +5,7 @@ block content
         .container
             .b-portfolio-item__date 2 марта 2016
 
-            h1.b-page__title #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante]#[br]«Лучший брокер»
+            h1.b-page__title.b-page__title_small #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante]#[br]«Лучший брокер»
 
             .b-language-tabs
                 ul.b-language-tabs__list(role="tablist")
