--- a/src/templates/portfolio_item_2_ajax.jade
+++ b/src/templates/portfolio_item_2_ajax.jade
@@ -1,7 +1,7 @@
 #portfolio_2(style='width:1080px;padding:114px 40px 0;background:#fff;border-radius:15px;')
     .b-portfolio-item__date 2 марта 2016
 
-    h1.b-page__title #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] “Лучший брокер” 2
+    h1.b-page__title.b-page__title_small #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] “Лучший брокер” 2
 
     .b-language-tabs
         ul.b-language-tabs__list(role="tablist")
