add video preview to portfolio fix filter arrow fix portfolio list

--- a/src/blocks/b-filter/b-filter.less
+++ b/src/blocks/b-filter/b-filter.less
@@ -42,19 +42,21 @@
 	}
 
 	&.b-filter__item_with-arrow:after {
-		content: '';
+		@media (min-width: @grid-float-breakpoint) {
+			content: '';
 
-		position: absolute;
-		bottom: -10px - 11px;
-		left: 50%;
-		transform: translateX(-50%);
+			position: absolute;
+			bottom: -10px - 11px;
+			left: 50%;
+			transform: translateX(-50%);
 
-		width: 0;
-		height: 0;
-		border-left: 10px solid transparent;
-		border-right: 10px solid transparent;
+			width: 0;
+			height: 0;
+			border-left: 10px solid transparent;
+			border-right: 10px solid transparent;
 
-		border-bottom: 10px solid #f5f6fa;
+			border-bottom: 10px solid #f5f6fa;
+		}
 	}
 }
 
