--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -70,7 +70,7 @@ block content
 
             .g-loader.g-loader_without-gradient
                 .g-loader__content
-                    a.btn.btn-info.g-loader__link(href='portfolio_type_1.html') Посмотреть все 985 работ
+                    a.btn.btn-info.g-loader__link(href='portfolio_type_1.html') Смотреть все 985 работ
 
                     p.g-loader__text Запаситесь чашечкой чая или кофе — для просмотра всех работ потребуется больше 50 минут.
         .b-treatment.g-mt20
@@ -294,7 +294,7 @@ block content
                         a.b-reviews__link(href='#') Оригинал отзыва
             .g-loader.g-loader_theme_dark.g-loader_without-gradient
                 .g-loader__content
-                    a.btn.btn-info.g-loader__link(href='reviews.html') Посмотреть все 232 отзыва
+                    a.btn.btn-info.g-loader__link(href='reviews.html') Смотреть все 232 отзыва
         .b-blog.g-mb50
             h2.b-blog__header Справочник клиента
 
