--- a/src/blocks/g-loader/g-loader.less
+++ b/src/blocks/g-loader/g-loader.less
@@ -53,10 +53,17 @@
 	font-weight: bold;
 	letter-spacing: .1em;
 	text-transform: uppercase;
-	padding: 16px 45px;
+	padding: 17px 25px;
 	border-radius: 54px/2;
+	font-size: 14px;
+	line-height: 1.2;
 
 	transition: all .2s;
+
+	@media (min-width: @grid-float-breakpoint) {
+		padding: 17px 45px;
+		font-size: 16px;
+	}
 
 	&.btn-info {
 		box-shadow: 0 8px 24px rgba(0, 143, 203, .4);
