--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -167,6 +167,7 @@ html.videoautoplay .b-portfolio__video {
 	display: inline-block;
 	border-radius: 25px/2;
 	letter-spacing: .1em;
+	text-transform: uppercase;
 
 	padding: 0 11px;
 }
