--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -68,7 +68,7 @@ block content
                     $(this).data('hold', Math.floor(Math.random() * 400) + 50);
                 });
 
-            .g-loader.g-loader_without-gradient
+            .g-loader
                 .g-loader__content
                     a.btn.btn-info.g-loader__link(href='portfolio_type_1.html') Смотреть все 985 работ
 
@@ -292,7 +292,7 @@ block content
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
-            .g-loader.g-loader_theme_dark.g-loader_without-gradient
+            .g-loader.g-loader_theme_dark
                 .g-loader__content
                     a.btn.btn-info.g-loader__link(href='reviews.html') Смотреть все 232 отзыва
         .b-blog.g-mb50
