--- a/src/blocks/b-portfolio-tag/b-portfolio-tag.less
+++ b/src/blocks/b-portfolio-tag/b-portfolio-tag.less
@@ -27,10 +27,14 @@
 	{
 		padding-top: 4px;
 		padding-bottom: 40px;
-		margin : 0 -40px;
+		margin : 0 -15px;
 		border-radius: 0;
 		border-bottom-left-radius: 10px;
 		border-bottom-right-radius: 10px;
+
+		@media (min-width: 1200px) {
+			margin: 0 -40px;
+		}
 	}
 }
 
