--- a/src/templates/clients.jade
+++ b/src/templates/clients.jade
@@ -39,6 +39,6 @@ block content
                             span.b-clients__title Евгений Лановой
                             .b-clients__content
                                 img.b-clients__image(src='assets/img/tmp/client_2_on.png')
-                .g-loader.g-loader_theme_dark
+                .g-loader.g-loader_theme_dark.g-loader_clients
                     .g-loader__content
                         a.g-loader__button(href='#') #[span.g-loader__button-text Загрузить ещё]
