--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -131,7 +131,7 @@ block content
                 $('.b-reviews__item').each(function(){
                     $(this).data('hold', Math.floor(Math.random() * 450) + 50);
                 });
-            .g-loader.g-loader_theme_dark
+            .g-loader.g-loader_theme_dark.g-loader_reviews
                 .g-loader__content
                     a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
         .hidden
