--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -41,7 +41,7 @@ block content
                                     img.b-portfolio-item__image.img-responsive(src='http://placehold.it/160x600', alt='')
                             #banner_language_ru_size_300_300.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
-                                    video.b-portfolio-item__video(preload='auto', controls, src="https://s1.2myshows.me:8443/12.monkeys/s01/12.Monkeys.S01E01.1080p.rus.LostFilm.TV.360p.mp4")
+                                    video.b-portfolio-item__video(preload='auto', controls, controlsList="nodownload", src="https://s1.2myshows.me:8443/12.monkeys/s01/12.Monkeys.S01E01.1080p.rus.LostFilm.TV.360p.mp4")
                     #banner_language_en.tab-pane(role="tabpanel")
                         ul.b-size-tabs.list-unstyled
                             li.b-size-tabs__item.active(role="presentation"): a.b-size-tabs__link(href='#banner_language_en_size_240_400', aria-controls="banner_language_en_size_240_400", role="tab", data-toggle="tab") 240#[span.b-size-tabs__divider x]400
