--- a/src/blocks/b-size-filter/b-size-filter.less
+++ b/src/blocks/b-size-filter/b-size-filter.less
@@ -30,7 +30,7 @@
 	&:before {
 		content: '#';
 		font-size: 15px;
-		color: #d9dbe6;
+		color: fade(#4C5370, 20%);
 		margin-right: 10px;
 		transition: all .2s;
 	}
@@ -41,8 +41,7 @@
 		background: #4c5370;
 
 		&:before {
-			color: #9ba1b6;
-			opacity: .4;
+			color: fade(#ffffff, 20%);
 		}
 	}
 }
@@ -58,8 +57,7 @@
 	color: #fff !important;
 
 	&:before {
-		color: #9ba1b6;
-		opacity: .4;
+		color: fade(#ffffff, 20%);
 	}
 }
 
