--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -1,3 +1,6 @@
+.b-call-widget.b-call-widget__collapsed
+    .b-call-widget__button
+    .b-call-widget__content test
 .b-footer
     .container
         .row.b-footer__row
