--- a/src/blocks/b-size-tabs/b-size-tabs.less
+++ b/src/blocks/b-size-tabs/b-size-tabs.less
@@ -27,7 +27,7 @@
 	&:before {
 		content: '#';
 		font-size: 15px;
-		color: #d9dbe6;
+		color: fade(#4C5370, 20%);
 		margin-right: 10px;
 	}
 
@@ -46,7 +46,7 @@
 	color: #fff;
 
 	&:before {
-		color: #9ba1b6;
+		color: fade(#ffffff, 20%);
 	}
 }
 
