--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -133,7 +133,7 @@ block content
                 });
             .g-loader.g-loader_theme_dark.g-loader_reviews
                 .g-loader__content
-                    a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
+                    a.g-loader__button.g-loader__button_state_loading(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
         .hidden
             #review_1
                 .b-review-image
