--- a/src/blocks/b-clients/b-clients.less
+++ b/src/blocks/b-clients/b-clients.less
@@ -71,6 +71,15 @@
 		background: linear-gradient(to left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 40%, rgba(255, 255, 255, .2));
 		content: '';
 	}
+
+	transition: opacity 500ms ease-out, transform 500ms cubic-bezier(0, 0, 0.001, 1);
+	opacity: 0;
+	transform: scaleY(.92);
+}
+
+.b-clients__item_loaded {
+	opacity: 1;
+	transform: scaleY(1);
 }
 
 .b-clients__title {
