--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -61,6 +61,10 @@
 	height: 150px;
 	margin: 5px;
 
+	transition: opacity 500ms ease-out, transform 500ms cubic-bezier(0, 0, 0.001, 1);
+	opacity: 0;
+	transform: scaleY(.92);
+
 	@media (min-width: @portfolio-breakpoint) {
 		width: 204px;
 		height: 204px;
@@ -78,6 +82,11 @@
 			opacity: 1;
 		}
 	}
+}
+
+.b-portfolio__item_loaded {
+	opacity: 1;
+	transform: scaleY(1);
 }
 
 .b-portfolio__item_width_2 {
@@ -195,6 +204,7 @@ html.videoautoplay .b-portfolio__video {
 	border-radius: 25px/2;
 	letter-spacing: .1em;
 	text-transform: uppercase;
+	background: #4C5370;
 
 	padding: 0 11px;
 }
