--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -37,6 +37,15 @@
 	background: #ffffff;
 	border-radius: 10px;
 	box-shadow: 0 8px 48px rgba(76, 83, 112, .1);
+
+	transition: opacity 200ms ease-out, transform 200ms cubic-bezier(0, 0, 0.001, 1);
+	opacity: 0;
+	transform: scale(.95);
+}
+
+.b-reviews__item_loaded {
+	opacity: 1;
+	transform: scale(1);
 }
 
 .b-reviews__header {
