--- a/src/less/common.less
+++ b/src/less/common.less
@@ -248,12 +248,13 @@ body {
 
 .fancybox-close {
 	position: fixed;
-	right: 50px;
-	top: 45px;
-	width: 38px;
-	height: 38px;
+	right: 45px;
+	top: 40px;
+	width: 48px;
+	height: 48px;
+	z-index: 8041;
 
-	background: left top no-repeat url("../../assets/img/slider-close.png");
+	background: center center no-repeat url("../../assets/img/slider-close.png");
 	background-size: 38px;
 	opacity: .5;
 	transition: all .1s;
@@ -363,4 +364,23 @@ body {
 
 .scrollbar-light > .scroll-content.scroll-scrollx_visible {
 	padding-bottom: 18px;
+}
+
+#fancybox-loading {
+	background: none;
+	margin-top: -170px/2;
+	margin-left: -170px/2;
+	opacity: 1;
+}
+
+#fancybox-loading div {
+	width: 170px;
+	height: 170px;
+
+	background: center center no-repeat url("../../assets/img/load.gif");
+	background-size: 170px;
+}
+
+html.smil #fancybox-loading div {
+	background-image: url("../../assets/img/load.svg");
 }
