--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -1,6 +1,7 @@
 .b-call-widget.b-call-widget__collapsed
     .b-call-widget__button
-    .b-call-widget__content test
+    .b-call-widget__content
+        <iframe src="https://tolkunov.com/block/callback" frameborder="0" width="100%" height="100%" id="callbackFrame"></iframe>
 .b-footer
     .container
         .row.b-footer__row
