remove transform scale from tags some fixes

--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -134,6 +134,6 @@
 		background-color: #9eb000;
 		border-color: #9eb000;
 		box-shadow: 0 8px 24px fade(#9eb000, 40%);
-		transform: scale(1.05);
+		//transform: scale(1.05);
 	}
 }
