--- a/src/blocks/b-portfolio-tag/b-portfolio-tag.less
+++ b/src/blocks/b-portfolio-tag/b-portfolio-tag.less
@@ -6,7 +6,7 @@
 {
 	background: #f5f6fa;
 	text-align: center;
-	padding: 40px-15px/2 0 25px+15px/2;
+	padding: 40px-15px/2 30px 25px+15px/2;
 	margin : -29px auto 100px;
 	border-radius: 10px;
 
@@ -104,7 +104,7 @@
 
 	&:hover
 	{
-		transform         : scale(1.05);
+		//transform         : scale(1.05);
 	}
 
 	&:hover:before,
