--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -114,7 +114,7 @@
 		text-decoration: none;
 		color: #fff;
 		background: #4c5370;
-		transform: scale(1.05);
+		//transform: scale(1.05);
 
 		&:before {
 			color: #9ba1b6;
