--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -16,6 +16,7 @@
 }
 
 .b-portfolio-item__view {
+	position: relative;
 	background: #f5f6fa;
 	//background: left top repeat url("../../assets/img/banner-background.png");
 	padding: 80px 15px;
@@ -135,5 +136,25 @@
 		border-color: #9eb000;
 		box-shadow: 0 8px 24px fade(#9eb000, 40%);
 		//transform: scale(1.05);
+	}
+}
+
+.b-portfolio-item__border {
+	position: absolute;
+	top: 80px;
+
+	left: 50%;
+	transform: translateX(-50%);
+
+	max-width: ~"calc(100% - 30px)";
+	max-height: ~"calc(100% - 80px * 2)";
+
+	@media (min-width: @grid-float-breakpoint) {
+		top: 105px;
+		max-height: ~"calc(100% - 105px * 2)";
+	}
+
+	@media (min-width: 1200px) {
+		max-width: ~"calc(100% - 110px)";
 	}
 }
