--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -21,6 +21,7 @@ head
     block scripts
         script(src='assets/vendor/jquery/dist/jquery.min.js')
         script(src='assets/vendor/bootstrap/dist/js/bootstrap.min.js')
+        script(src='assets/vendor/packery/dist/packery.pkgd.min.js')
         script(src='assets/vendor/masonry/dist/masonry.pkgd.min.js')
         script(src='assets/vendor/slick-carousel/slick/slick.min.js')
         script(src='assets/vendor/retina.js/dist/retina.min.js')
