--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -25,23 +25,23 @@ block content
                         .tab-content
                             #banner_language_ru_size_240_400.tab-pane.active(role="tabpanel")
                                 .b-portfolio-item__view
+                                    .b-portfolio-item__border(style="width:1200px;height:90px;border:5px solid black;margin-top:-5px;")
                                     .b-portfolio-item__scroll.scrollbar-light
                                         img.b-portfolio-item__image(src='http://placehold.it/1200x90', alt='')
-                                    .b-portfolio-item__border(style="width:1200px;height:90px;border:5px solid black;")
                             #banner_language_ru_size_100_100.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
+                                    .b-portfolio-item__border(style="width:728px;height:90px;border:5px solid black;margin-top:-5px;")
                                     .b-portfolio-item__scroll.scrollbar-light
                                         .b-iframe-scroll(style="width:728px;height:90px;")
                                             <iframe src="https://tolkunov.com/uploads/portfolio/3140f491b1c328a74e750416859c5117/300x250-paybis-bicoin-to-card.html" width="728" height="90" frameborder="0" scrolling="no"></iframe>
                                             .b-iframe-scroll__fix
-                                    .b-portfolio-item__border(style="width:728px;height:90px;border:5px solid black;")
                             #banner_language_ru_size_200_300.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
                                     img.b-portfolio-item__image.img-responsive(src='http://placehold.it/1200x300', alt='')
                             #banner_language_ru_size_160_600.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
+                                    .b-portfolio-item__border(style="width:160px;height:600px;border:5px solid black;margin-top:-5px;")
                                     img.b-portfolio-item__image.img-responsive(src='http://placehold.it/160x600', alt='')
-                                    .b-portfolio-item__border(style="width:160px;height:600px;border:5px solid black;")
                             #banner_language_ru_size_300_300.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
                                     video.b-portfolio-item__video(preload='auto', controls, controlsList="nodownload", src="https://s1.2myshows.me:8443/12.monkeys/s01/12.Monkeys.S01E01.1080p.rus.LostFilm.TV.360p.mp4")
